# camera-intrinsic-calibration-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  clippy.toml  pyproject.toml  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust.yml  windows.yml
benches/: benchmark.rs
data/: board_config.json  board_config5x9.json  default_board_config.json
docs/: tutorial.md
examples/: convert_model.rs  remap.rs  test_pnp.rs
scripts/: build_all.sh  build_macos.sh  cross_build_linux_aarch64.sh  cross_build_linux_x86_64.sh  cross_build_windows_x86_64.sh  setup_cross_compile.sh
src/: board.rs  data_loader.rs  detected_points.rs  io.rs  lib.rs  main.rs  types.rs  util.rs  visualization.rs
src/camera_model/: eucm.rs  eucmt.rs  generic.rs  kb4.rs  mod.rs  opencv5.rs  ucm.rs
src/optimization/: factors.rs  homography.rs  linear.rs  mod.rs
tests/: board_test.rs  config_features.rs  dataset_generator.rs  edge_cases.rs  enhanced_reports.rs  extrinsic_validation.rs  optimization_test.rs  types_test.rs  util_test.rs
