[package]
name = "camera-intrinsic-calibration"
version = "0.11.2"
edition = "2024"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
description = "Camera Intrinsic Calibration"
homepage = "https://github.com/powei-lin/camera-intrinsic"
repository = "https://github.com/powei-lin/camera-intrinsic"
keywords = ["camera-intrinsic", "intrinsic", "fisheye"]
categories = ["data-structures", "science", "mathematics", "science::robotics"]
exclude = [
    "/.github/*",
    "*.ipynb",
    "scripts/*",
    "examples/*",
    "tests/*",
    "data/*",
    "docs/*",
]

[dependencies]
aprilgrid = "0.8.0"
camera-intrinsic-model = "0.8.0"
clap = { version = "4.5", features = ["derive"] }
colorous = "1.0.16"
env_logger = "0.11.8"
faer = "0.23.2"
glam = "0.30"
glob = "0.3.3"
image = "0.25"
indicatif = { version = "0.18", features = ["rayon"] }
log = "0.4.27"
nalgebra = "0.34.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.10.0"
rerun = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqpnp_simple = "0.2.0"
time = { version = "0.3", features = ["local-offset"] }
tiny-solver = "0.18.0"

[lints.clippy]
# Deny correctness issues
correctness = { level = "deny", priority = -1 }
# Warn on suspicious code
suspicious = { level = "deny", priority = -1 }
# Pedantic warnings
pedantic = { level = "warn", priority = -1 }
# Nursery lints
nursery = { level = "warn", priority = -1 }
# Cargo issues
cargo = { level = "warn", priority = -1 }
# Style issues
style = { level = "warn", priority = -1 }
# Complexity
complexity = { level = "warn", priority = -1 }
# Performance
perf = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict
too_many_lines = "allow"
module_name_repetitions = "allow"
unused_self = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
many_single_char_names = "allow"
# Allow blanket restriction lints
blanket_clippy_restriction_lints = "allow"
# Allow lint groups priority
lint_groups_priority = "allow"

[[bin]]
name = "ccrs"
path = "src/bin/camera_calibration.rs"

[[bin]]
name = "dataset-generator"
path = "src/bin/dataset_generator.rs"
test = false
bench = false

[[example]]
name = "convert_model"
path = "examples/convert_model.rs"

[[example]]
name = "test_pnp"
